# effdl26-week07-homework

./: .pre-commit-config.yaml  Dockerfile  Dockerfile.grpc  Dockerfile.grpc_client  Dockerfile.http  README.md  docker-compose.yaml  inference_pb2.pyi  inference_pb2_grpc.py  pyproject.toml  run_codegen.py
scripts/ci/: docker_grpc_smoke_test.sh  docker_smoke_test.sh
src/: config.py  grpc_api.py  grpc_client.py  main.py  model.py
tests/: conftest.py  test_grpc.py  test_http.py  test_model.py
